refactor: 번쩍 모임 수정 시 모임 키워드를 받도록 리팩토링