@@ -4,7 +4,6 @@ import static org.sopt.makers.crew.main.global.exception.ErrorStatus.*;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 import org.sopt.makers.crew.main.entity.tag.Tag;
 import org.sopt.makers.crew.main.entity.tag.TagRepository;
@@ -14,7 +13,7 @@ import org.sopt.makers.crew.main.entity.tag.enums.TagType;
 import org.sopt.makers.crew.main.entity.tag.enums.WelcomeMessageType;
 import org.sopt.makers.crew.main.global.exception.BadRequestException;
 import org.sopt.makers.crew.main.global.exception.NotFoundException;
-import org.sopt.makers.crew.main.tag.v2.dto.response.TagV2CreateFlashTagResponseDto;
+import org.sopt.makers.crew.main.tag.v2.dto.response.TagV2CreateAndUpdateFlashTagResponseDto;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -32,29 +31,15 @@ public class TagV2ServiceImpl implements TagV2Service {
 
 	@Override
 	@Transactional
-	public TagV2CreateFlashTagResponseDto createFlashTag(List<String> welcomeMessageTypes,
+	public TagV2CreateAndUpdateFlashTagResponseDto createFlashTag(List<String> welcomeMessageTypes,
 		List<String> meetingKeywordTypes,
 		Integer flashId) {
 		if (flashId == null) {
 			throw new BadRequestException(VALIDATION_EXCEPTION.getErrorCode());
 		}
 
-		if (meetingKeywordTypes == null || meetingKeywordTypes.isEmpty()
-			|| meetingKeywordTypes.size() > MAX_MEETING_KEYWORD_SIZE) {
-			throw new BadRequestException(INVALID_MEETING_KEYWORD_SIZE.getErrorCode());
-		}
-
-		List<MeetingKeywordType> meetingKeywordTypeEnums = meetingKeywordTypes.stream()
-			.map(MeetingKeywordType::ofValue)
-			.toList();
-
-		if (welcomeMessageTypes == null || welcomeMessageTypes.isEmpty()) {
-			return saveTag(flashId, List.of(), meetingKeywordTypeEnums);
-		}
-
-		List<WelcomeMessageType> welcomeMessageTypeEnums = welcomeMessageTypes.stream()
-			.map(WelcomeMessageType::ofValue)
-			.toList();
+		List<MeetingKeywordType> meetingKeywordTypeEnums = toMeetingKeywordTypes(meetingKeywordTypes);
+		List<WelcomeMessageType> welcomeMessageTypeEnums = toWelcomeMessageTypes(welcomeMessageTypes);
 
 		return saveTag(flashId, welcomeMessageTypeEnums, meetingKeywordTypeEnums);
 	}
@@ -72,28 +57,44 @@ public class TagV2ServiceImpl implements TagV2Service {
 
 	@Override
 	@Transactional
-	public TagV2CreateFlashTagResponseDto updateFlashTag(List<String> welcomeMessageTypes, Integer flashId) {
+	public TagV2CreateAndUpdateFlashTagResponseDto updateFlashTag(List<String> welcomeMessageTypes,
+		List<String> meetingKeywordTypes,
+		Integer flashId) {
 		Tag tag = tagRepository.findTagByFlashId(flashId)
 			.orElseThrow(() -> new NotFoundException(NOT_FOUND_TAG.getErrorCode()));
 
-		List<WelcomeMessageType> welcomeMessageTypeEnums = convertToWelcomeMessageTypeList(welcomeMessageTypes);
+		List<WelcomeMessageType> welcomeMessageTypeEnums = toWelcomeMessageTypes(welcomeMessageTypes);
+		List<MeetingKeywordType> meetingKeywordTypeEnums = toMeetingKeywordTypes(meetingKeywordTypes);
 
 		tag.updateWelcomeMessageTypes(welcomeMessageTypeEnums);
+		tag.updateMeetingKeywordTypeEnums(meetingKeywordTypeEnums);
 
-		return TagV2CreateFlashTagResponseDto.from(tag.getId());
+		return TagV2CreateAndUpdateFlashTagResponseDto.from(tag.getId());
 	}
 
-	private TagV2CreateFlashTagResponseDto saveTag(Integer flashId, List<WelcomeMessageType> welcomeMessageTypes,
+	private TagV2CreateAndUpdateFlashTagResponseDto saveTag(Integer flashId,
+		List<WelcomeMessageType> welcomeMessageTypes,
 		List<MeetingKeywordType> meetingKeywordTypes) {
 		Tag tag = Tag.createFlashMeetingTag(TagType.FLASH, flashId, welcomeMessageTypes, meetingKeywordTypes);
 		tagRepository.save(tag);
-		return TagV2CreateFlashTagResponseDto.from(tag.getId());
+		return TagV2CreateAndUpdateFlashTagResponseDto.from(tag.getId());
 	}
 
-	private List<WelcomeMessageType> convertToWelcomeMessageTypeList(List<String> welcomeMessageTypes) {
-		return Optional.ofNullable(welcomeMessageTypes)
-			.filter(list -> !list.isEmpty())
-			.map(list -> list.stream().map(WelcomeMessageType::ofValue).toList())
-			.orElse(Collections.emptyList());
+	private List<WelcomeMessageType> toWelcomeMessageTypes(List<String> values) {
+		if (values == null || values.isEmpty()) {
+			return List.of();
+		}
+		return values.stream()
+			.map(WelcomeMessageType::ofValue)
+			.toList();
+	}
+
+	private List<MeetingKeywordType> toMeetingKeywordTypes(List<String> values) {
+		if (values == null || values.isEmpty() || values.size() > MAX_MEETING_KEYWORD_SIZE) {
+			throw new BadRequestException(INVALID_MEETING_KEYWORD_SIZE.getErrorCode());
+		}
+		return values.stream()
+			.map(MeetingKeywordType::ofValue)
+			.toList();
 	}
 }
